--- a/index.html
+++ b/index.html
@@ -5,8 +5,22 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>1st Assignment</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Koulen&family=Poppins&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+  
+<section>
+  
+  <div class="banner-image ">
+  <div class="banner-text">
+    <h1 >Let's Help Those Who Are<br> More In Need</h1> 
+    
+      
+      <p>Everyone should stand by the helpless people. <br>There is immense peace hidden in helping them.</p>
+      <button>Donate Now</button>
+  </div>
+  </div>
+</section>
 </body>
